tests/paczka1/fuzzy1/51765552.err
Error in line 1: m9oo90FqH7i S290 35,5
Error in line 26: A189 S859 74,2
